force-app/main/default/objects/Purge_Recs__mdt.object
<CustomObject>
    <description>Custom metadata to purge records that are no longer needed in Production.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchSize__c</fullName>
        <description>Batch size for the purge record</description>
        <label>BatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_By_Date__c</fullName>
        <label>Filter By Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CreatedDate</fullName>
                    <default>true</default>
                    <label>Created Date</label>
                </value>
                <value>
                    <fullName>LastModifiedDate</fullName>
                    <label>Last Modified Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <description>Limited applied to the SOQL prior to the delete</description>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Job_Control__c</fullName>
                    <label>Job Control</label>
                </value>
                <value>
                    <fullName>PE_Business_Exception__c</fullName>
                    <label>Business Exceptions</label>
                </value>
                <value>
                    <fullName>Exception_Log__c</fullName>
                    <label>Exception Logs</label>
                </value>
                <value>
                    <fullName>Stg_CRICOS_Code__c</fullName>
                    <label>CRICOS Staging</label>
                </value>
                <value>
                    <fullName>Stg_Calendar__c</fullName>
                    <label>Calendar Staging</label>
                </value>
                <value>
                    <fullName>Stg_Calendar_Dates__c</fullName>
                    <label>Calendar Dates Staging</label>
                </value>
                <value>
                    <fullName>Stg_Course__c</fullName>
                    <label>Course Staging</label>
                </value>
                <value>
                    <fullName>Channel__c</fullName>
                    <label>Channel Staging</label>
                </value>
                <value>
                    <fullName>Encumbrance__c</fullName>
                    <label>Encumbrances</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <label>Contacts</label>
                </value>
                <value>
                    <fullName>Unit_Set_Attempt__c</fullName>
                    <label>Unit Set Attempts</label>
                </value>
                <value>
                    <fullName>Unit_Attempt__c</fullName>
                    <label>Unit Attempts</label>
                </value>
                <value>
                    <fullName>Course_Attempt__c</fullName>
                    <label>Course Attempts</label>
                </value>
                <value>
                    <fullName>contact_qualification__c</fullName>
                    <label>Contact Qualifications</label>
                </value>
                <value>
                    <fullName>DuplicateRecordSet</fullName>
                    <label>Duplicate Record Sets</label>
                </value>
                <value>
                    <fullName>Case</fullName>
                    <label>Enquiries</label>
                </value>
                <value>
                    <fullName>EmailMessage</fullName>
                </value>
                <value>
                    <fullName>ucinn_ascendv2__Automated_Process_Log__c</fullName>
                    <label>Ascend Automated Process Logs</label>
                </value>
                <value>
                    <fullName>ucinn_ascendv2__Log__c</fullName>
                    <label>Ascend Logs</label>
                </value>
                <value>
                    <fullName>Address__c</fullName>
                    <label>Addresses</label>
                </value>
                <value>
                    <fullName>Phone__c</fullName>
                    <label>Phones</label>
                </value>
                <value>
                    <fullName>Name__c</fullName>
                    <label>Names</label>
                </value>
                <value>
                    <fullName>Email__c</fullName>
                    <label>Emails</label>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Application__c</fullName>
                    <label>Applications</label>
                </value>
                <value>
                    <fullName>Chat_356_Log__c</fullName>
                    <isActive>false</isActive>
                    <label>Chat_356_Log__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Older_than__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Older than is the number of days - To be used in the query to delete all the records before that time</description>
        <inlineHelpText>In Days</inlineHelpText>
        <label>Older than</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_By__c</fullName>
        <description>Prioritise records base on the order</description>
        <label>Order By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Purge Records</label>
    <listViews>
        <fullName>Purge_Records</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>Active__c</columns>
        <columns>Object__c</columns>
        <columns>Filter_By_Date__c</columns>
        <columns>Filter_Criteria__c</columns>
        <columns>Older_than__c</columns>
        <columns>Order_By__c</columns>
        <columns>Limit__c</columns>
        <columns>BatchSize__c</columns>
        <filterScope>Everything</filterScope>
        <label>Purge Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Purge Records</pluralLabel>
</CustomObject>